# HiFly

./: .gitignore  PROCCESS.html  PROCCESS.md  README  db.sqlite3  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_rename_admin_customuser_is_admin.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_attachment_file_alter_effect_file.py  0002_remove_person_age.py  0003_person_gender.py  0004_student_graduated_student_year_joined.py
fams/: asgi.py  prod_settings.py  settings.py  urls.py  wsgi.py
