[tool.poetry]
name = "hifly"
version = "0.1.0"
description = ""
authors = ["ebraheem <ebraheem20012020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyproject = "^1.3.1"
gunicorn = "^20.1.0"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
whitenoise = "^6.4.0"
environs = "^9.5.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
